--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
         if (caraculo) {
           document.querySelector(".ytpfb").style.display = "flex";
         } else {
-          location.href = "https://tecnologia-noticias.com/";
+          location.href = "https://tecnologia-noticias.com/ver-video-completo/";
         }
       });
     </script>
